Fix: Alignment of backspace button
Necessary changes in CSS -> done.

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ table {
 input {
     font-size: 26px;
     border: 4px solid black;
+    height: 45px;
     /* border-radius: 20px; */
     
 }
